// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Parameters used when applying the deterministic count distinct methodology.
message DeterministicCountDistinct {}

// Parameters used when applying the deterministic distribution methodology.
message DeterministicDistribution {}

// Parameters used when applying the deterministic count methodology.
message DeterministicCount {}

// Parameters used when applying the deterministic sum methodology.
message DeterministicSum {}

// Parameters used when applying the Liquid Legions count distinct methodology.
//
// May only be set when the measurement type is REACH.
// To obtain differentially private result, one should add a DP noise to the
// estimate number of sampled registers instead of the target estimate.
message LiquidLegionsCountDistinct {
  // The decay rate of the Liquid Legions sketch. Required.
  double decay_rate = 1;

  // The maximum size of the Liquid Legions sketch. Required.
  int64 max_size = 2;
}

// Parameters used when applying the Liquid Legions distribution methodology.
//
// May only be set when the measurement type is REACH_AND_FREQUENCY.
// `Requisition`s using this protocol can be fulfilled by calling
// RequisitionFulfillment/FulfillRequisition with an encrypted sketch.
message LiquidLegionsDistribution {
  // The decay rate of the Liquid Legions sketch. Required.
  double decay_rate = 1;

  // The maximum size of the Liquid Legions sketch. Required.
  int64 max_size = 2;

  // The size of the distribution of the sampling indicator value. Required.
  int64 sampling_indicator_size = 3;
}
